# Art-of-Geometry

./: .gitignore  .pylintrc  .ruff.toml  LICENSE  MANIFEST.in  Makefile  README.md  install  install-editable-dev  install-editable-dev-mac-sys  install-editable-dev-mac-sys.bat  install-editable-dev.bat  install-setup-requirements  make.bat  poetry-add-deps  poetry-add-deps.bat  pyproject-poetry.toml  pyproject-setuptools.toml  pyproject.toml  requirements-core.txt  requirements-doc.txt  requirements-jupyter.txt  requirements-setup.txt  requirements-viz.txt  requirements.txt  setup.cfg  setup.py  test_R3_Pt_Ln.py
.github/workflows/: Install-Lint-Test-on-Mac.yaml  Install-Lint-Test-on-Ubuntu.yml  Install-Lint-Test-on-Windows.yml  install.yml
art_of_geom/: __init__.py  metadata.yml
art_of_geom/_util/: _inspect.py  _log.py  _tmp.py  _type.py
art_of_geom/euclid/: point.py
art_of_geom/euclid/r2/: point.py
art_of_geom/euclid/r2/conic/: __init__.py
art_of_geom/euclid/r2/polygon/: __init__.py
art_of_geom/euclid/r2/polygon/quadrilateral/: __init__.py
art_of_geom/euclid/r2i/: __init__.py
art_of_geom/euclid/r2i/conic/ellipse/: circle.py
art_of_geom/euclid/r3/: __init__.py  plane.py
art_of_geom/geom/: __init__.py  abc.py  line.py  point.py  session.py  var.py
art_of_geom/geom/_abc/: _entity.py  _line.py  _point.py  _session.py  _space.py
art_of_geom/geom/euclid/: line.py  point.py
art_of_geom/geom/euclid/_abc/: _line.py  _point.py
art_of_geom/geom/euclid/_r0/_abc/: _point.py
art_of_geom/geom/euclid/_r1/: _sphere.py  coord.py  point.py
art_of_geom/geom/euclid/_r1/_abc/: _entity.py
art_of_geom/geom/euclid/r2/: _abc.py  abc.py  angle.py  circle.py  coord.py  line.py  point.py
art_of_geom/geom/euclid/r2/_abc/: _entity.py
art_of_geom/geom/euclid/r2/conic/: __init__.py  abc.py  ellipse.py  hyperbola.py  parabola.py
art_of_geom/geom/euclid/r2/polygon/: __init__.py
art_of_geom/geom/euclid/r2i/: __init__.py  abc.py  circle.py  point.py
art_of_geom/geom/euclid/r3/: _abc.py  abc.py  coord.py  line.py  plane.py  point.py
art_of_geom/geom/non_euclid/: __init__.py  abc.py  line.py  surface.py
art_of_geom/geom/non_euclid/elliptic/: abc.py  line.py  surface.py
art_of_geom/geom/non_euclid/elliptic/earth/: surface.py
art_of_geom/geom/non_euclid/elliptic/spherical/: abc.py
art_of_geom/geom/non_euclid/hyperbolic/: abc.py  surface.py
art_of_geom/geom/non_euclid/mobius/: line.py  surface.py
art_of_geom/geom/non_euclid/torus/: line.py  surface.py
art_of_geom/non_euclid/: line.py  point.py
art_of_geom/non_euclid/elliptic/: line.py
art_of_geom/non_euclid/elliptic/spherical/: __init__.py
art_of_geom/non_euclid/hyperbolic/: __init__.py  line.py
art_of_geom/util/: __init__.py  compat.py  tmp.py  types.py
art_of_geometry/: __init__.py  line.py  point.py
art_of_geometry/euclid/: __init__.py  coord.py  line.py  point.py
art_of_geometry/euclid/r2/: __init__.py  angle_measure.py  line.py  point.py
art_of_geometry/euclid/r2/conic/: __init__.py  hyperbola.py
art_of_geometry/euclid/r2/conic/ellipse/: __init__.py  circle.py
art_of_geometry/euclid/r2/conic/parabola/: __init__.py
art_of_geometry/euclid/r2/polygon/triangle/: __init__.py
art_of_geometry/euclid/r2i/: __init__.py  coord.py  line.py  point.py
art_of_geometry/euclid/r2i/conic/ellipse/: circle.py
art_of_geometry/euclid/r3/: __init__.py  coord.py  line.py  plane.py  point.py
art_of_geometry/euclid_2d/: __init__.py
art_of_geometry/non_euclid/elliptic/: __init__.py
doc/: Makefile  build  parse-docstr
doc/source/: conf.py  index.md  index.rst
docs/: build
docs/source/: conf.py
install/: editable-dev  install-editable-dev-mac-sys  install-editable-dev-mac-sys.bat
install/Mac/: mac-deps
lint/: all  all.bat  ruff  ruff.bat
metadata/: classifiers  description
metadata/requirements/: base.txt  build.txt  doc.txt  jupyter.txt  lint.txt  manim.txt  publish.txt  test.txt  viz.txt
src/: test_R0_R1_Pt.py
src/art_of_geom/: __init__.py  metadata.yml
src/art_of_geom/_util/: _compat.py  _debug.py  _inspect.py  _log.py
src/art_of_geom/geom/euclid/_r1/: point.py
src/g/: __init__.py  session.py  var.py  variable.py
src/g/_abc/: _entity.py  coord_sys.py  entity.py  linear.py  point.py  session.py  variable.py  vector.py
src/g/_abc/entity/: __init__.py  abc.py  abstract.py  decor.py  geom.py  geometry.py  non_geom.py
src/g/_abc/space/: __init__.py  _abc.py  _space.py  abc.py
src/g/_alg/: __init__.py  abc.py  sympy.py
src/g/_art/: __init__.py  abc.py  geogebra.py  manim.py
src/g/_core/: __init__.py  coord_sys.py  variable.py  vector.py
src/g/_core/_entity/: __init__.py  abc.py  decor.py  geom.py  non_geom.py
src/g/_core/coord_sys/: __init__.py  abc.py  euclid.py  type.py
src/g/_core/entity/: decor.py  geom.py
src/g/_core/point/: __init__.py  abc.py  euclid.py
src/g/_core/space/: __init__.py  abc.py  linear.py
src/g/_geom/: point.py
src/g/_geom/entity/: decor.py  geometry.py
src/g/_util/: _type.py  cyclic_tuple.py  debug.py  inspect.py  tmp.py  type.py  unique_name.py
src/g/_util/inspect/: __init__.py
src/g/core/: __init__.py  variable.py
src/g/core/entity/: __init__.py  geom.py  non_geom.py
src/g/core/space/: abc.py
src/g/euclid/_abc/: _coord.py  _entity.py  _line.py  _point.py  _space.py
src/g/euclid/_r0/: _point.py
src/g/euclid/_r1/: _space.py  _sphere.py  point.py
src/g/euclid/_rD/: plane.py  point.py  sphere.py
src/g/euclid/r2/: _space.py  angle.py  circle.py  line.py  point.py
src/g/euclid/r2i/: abc.py
src/g/euclid/r3/: _space.py  line.py  plane.py  point.py
src/g/fractal/: julia.py  mandelbrot.py
src/g/geom/_abc/: _line.py
src/g/non_euclid/: surface.py
src/g/non_euclid/_abc/: line.py  point.py
src/g/non_euclid/elliptic/: line.py
src/g/non_euclid/hyperbolic/: line.py  surface.py
src/g/non_euclid/mobius/: line.py
src/g/non_euclid/torus/: line.py
test/: 2d  R0-R1-Pt  R0-R1-Pt.py  R1-Pt  R2-Pt-Ln  R2-Pt-Ln.py  R2_Pt_Ln.py  R3-Pt-Ln  R3-Pt-Ln.py  all  class-members  run  test
test/_core/: point.py  vector.py
(+76 files in other folders)
