# python-poetry.org/docs/pyproject


[tool.poetry]
name = 'Art-of-Geometry'
version = '0.0.0.a0'

description = 'Art of Geometry'

license = 'MIT'

authors = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>',
]
maintainers = [
  'The Vinh LUONG (LƯƠNG Thế Vinh) <TheVinhLuong@gmail.com>',
]

readme = 'README.md'

homepage = 'https://GitHub.com/Mathverse/Art-of-Geometry'
repository = 'https://GitHub.com/Mathverse/Art-of-Geometry'
documentation = 'https://Mathverse.GitHub.io/Art-of-Geometry'

keywords = [
  'Mathematics',
  'Maths',
  'Math',

  'Geometry',
  'geom',

  'art',
]

classifiers = [
  'Development Status :: 3 - Alpha',
  # 'Development Status :: 4 - Beta',
  # 'Development Status :: 5 - Production/Stable',
  # 'Development Status :: 6 - Mature',
  'Environment :: MacOS X',
  'Environment :: Win32 (MS Windows)',
  'Intended Audience :: Developers',
  'Intended Audience :: Education',
  'Intended Audience :: Information Technology',
  'Intended Audience :: Science/Research',
  'Operating System :: MacOS',
  'Operating System :: MacOS :: MacOS X',
  'Operating System :: Microsoft',
  'Operating System :: Microsoft :: Windows',
  'Operating System :: Microsoft :: Windows :: Windows 7',
  'Operating System :: Microsoft :: Windows :: Windows 8',
  'Operating System :: Microsoft :: Windows :: Windows 8.1',
  'Operating System :: Microsoft :: Windows :: Windows 10',
  'Operating System :: OS Independent',
  'Operating System :: Other OS',
  'Operating System :: POSIX',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Topic :: Education',
  'Topic :: Scientific/Engineering',
  'Topic :: Scientific/Engineering :: Mathematics',
  'Topic :: Software Development',
  'Topic :: Software Development :: Libraries',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Software Development :: Libraries :: Python Modules',
  'Topic :: Software Development :: User Interfaces',
  'Topic :: Software Development :: Widget Sets',
]

packages = [
  {include = 'g', from = 'src'}
]

include = []
exclude = []


[tool.poetry.dependencies]
python = '^3.11'
numpy = ">=1.24.2"
sympy = ">=1.11.1"


[tool.poetry.group.build]
optional = true

[tool.poetry.group.build.dependencies]
build = {version = ">=0.10.0", optional = true}


[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
commitizen = {version = ">=2.42.1", optional = true}
pre-commit = {version = ">=3.1.1", optional = true}


[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
commonmark = {version = ">=0.9.1", optional = true}
nbsphinx = {version = ">=0.8.12", optional = true}
recommonmark = {version = ">=0.7.1", optional = true}
sphinx = {version = ">=6.1.3", optional = true}
sphinx-autobuild = {version = ">=2021.3.14", optional = true}
sphinxcontrib-fulltoc = {version = ">=1.2.0", optional = true}
sphinxcontrib-jsmath = {version = ">=1.0.1", optional = true}
sphinx-rtd-theme = {version = ">=0.5.0", optional = true}


[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
bandit = {version = ">=1.7.4", optional = true}
flake8 = {version = ">=6.0.0", optional = true}
mypy = {version = ">=1.0.1", optional = true}
pycodestyle = {version = ">=2.10.0", optional = true}
pydocstyle = {version = ">=6.3.0", optional = true}
pylama = {version = ">=8.4.1", optional = true}
pylint = {version = ">=2.16.2", optional = true}


[tool.poetry.group.manim]
optional = true

[tool.poetry.group.manim.dependencies]


[tool.poetry.group.publish]
optional = true

[tool.poetry.group.publish.dependencies]
twine = {version = ">=4.0.2", optional = true}


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
nose = {version = ">=1.3.7", optional = true}
nose2 = {version = ">=0.12.0", optional = true}
pytest = {version = ">=7.2.2", optional = true}
pytest-cov = {version = ">=4.0.0", optional = true}
unittest2 = {version = ">=1.1.0", optional = true}


[tool.poetry.group.viz]
optional = true

[tool.poetry.group.viz.dependencies]
matplotlib = {version = ">=3.7.1", optional = true}


[tool.poetry.scripts]


[tool.poetry.extras]
# python-poetry.org/docs/pyproject#extras
# The dependencies specified for each extra must already be defined as project dependencies
# Dependencies listed in dependency groups cannot be specified as extras
build = []
dev = []
doc = []
lint = []
manim = []
publish = []
test = []
viz = []


[tool.poetry.plugins]

[tool.poetry.plugins."blogtool.parsers"]


[tool.poetry.urls]
GitHub = 'https://GitHub.com/Mathverse/Art-of-Geometry'


[build-system]
requires = [
  'Poetry-Core >= 1.5.1',
]
build-backend = 'poetry.core.masonry.api'
