# python.org/dev/peps/pep-0621
# packaging.python.org/en/latest/specifications/pyproject-toml
# setuptools.pypa.io/en/latest/userguide/pyproject_config.html


[project]
name = 'Art-of-Geometry'

keywords = [
  'Mathematics',
  'Maths',
  'Math',

  'Geometry',
  'geom',

  'art',
]

readme = {file = 'README.md', content-type = 'text/markdown', charset = 'UTF-8'}

license = {file = 'LICENSE'}

authors = [
  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'TheVinhLuong@gmail.com'},
]
maintainers = [
  {name = 'The Vinh LUONG (LƯƠNG Thế Vinh)', email = 'TheVinhLuong@gmail.com'},
]

requires-python = '>= 3.13'


dynamic = [
  'version',

  'description',

  'classifiers',

  'dependencies',
  'optional-dependencies',

  'entry-points',
  'scripts',
  'gui-scripts',
]


[project.urls]
Homepage = 'https://GitHub.com/Mathverse/Art-of-Geometry'
Repository = 'https://GitHub.com/Mathverse/Art-of-Geometry'
GitHub = 'https://GitHub.com/Mathverse/Art-of-Geometry'
Documentation = 'https://Mathverse.GitHub.io/Art-of-Geometry'


[tool.setuptools]
# setuptools.pypa.io/en/latest/userguide/pyproject_config.html#setuptools-specific-configuration

# platforms = []  # array

zip-safe = true

# eager-resources = []  # array

py-modules = []

# packages = []  # array or find directive

# package-dir = {}  # table/inline-table, used when explicitly listing packages

# namespace-packages = []  # array, deprecated

package-data = {}  # table/inline-table

include-package-data = true

exclude-package-data = {}  # table/inline-table

license-files = ['LICEN[CS]E*']  # array of glob patterns

data-files = {}  # table/inline-table, discouraged

# script-files = []  # array, deprecated

provides = []  # array, ignored by pip

obsoletes = []  # array, ignored by pip


[tool.setuptools.packages.find]
where = ['src']
include = ['*']
exclude = []
namespaces = true


[tool.setuptools.dynamic]
version = {file = 'metadata/version'}

description = {file = 'metadata/description'}

classifiers = {file = 'metadata/classifiers'}

dependencies = {file = 'metadata/requirements/base.txt'}

entry-points = {file = 'metadata/entry-points'}


[tool.setuptools.dynamic.optional-dependencies]
build = {file = 'metadata/requirements/build.txt'}
dev = {file = 'metadata/requirements/dev.txt'}
doc = {file = 'metadata/requirements/doc.txt'}
manim = {file = 'metadata/requirements/manim.txt'}
jupyter = {file = 'metadata/requirements/jupyter.txt'}
lint = {file = 'metadata/requirements/lint.txt'}
publish = {file = 'metadata/requirements/publish.txt'}
test = {file = 'metadata/requirements/test.txt'}
viz = {file = 'metadata/requirements/viz.txt'}


[build-system]
requires = [
  'SetUpTools >= 75.6.0',
  'Wheel >= 0.45.1',
]
build-backend = 'setuptools.build_meta'


[tool.pylint]
disable = [
  'relative-beyond-top-level',
]


# docs.pytest.org/en/latest/reference/reference.html#configuration-options
# docs.pytest.org/en/latest/reference/reference.html#ini-options-ref
[tool.pytest.ini_options]

# docs.pytest.org/en/latest/reference/reference.html#confval-addopts
addopts = [
  "--import-mode=importlib",
]

# docs.pytest.org/en/latest/explanation/goodpractices.html#conventions-for-python-test-discovery
# docs.pytest.org/en/latest/example/pythoncollection.html

# docs.pytest.org/en/latest/reference/reference.html#confval-python_files
python_files = [
  '*.py',
]
# docs.pytest.org/en/latest/reference/reference.html#confval-python_classes
python_classes = [
  'Check*', '*Check',
  'Test*', '*Test',
]
# docs.pytest.org/en/latest/reference/reference.html#confval-python_functions
python_functions = [
  'check_*', '*_check',
  'test_*', '*_test',
]

# docs.pytest.org/en/latest/reference/reference.html#confval-testpaths
testpaths = [
  'test',
]
