[metadata]
name = Art-of-Geometry
version = 0.0.0.dev0

url = GitHub.com/Mathverse/Art-of-Geometry
download_url = GitHub.com/Mathverse/Art-of-Geometry/archive/main.zip

author = The Vinh LUONG (LƯƠNG Thế Vinh)
author_email = Vinh@STEAMforVietNam.org
maintainer = The Vinh LUONG (LƯƠNG Thế Vinh)
maintainer_email = Vinh@STEAMforVietNam.org

classifiers =

license = MIT

description = Art of Geometry
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Mathematics
  Maths
  Math

  Geometry
  geom

  art


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.11

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =

[options.entry_points]
console_scripts =

[options.extras_require]
doc =

lint =

test =

viz =

[options.packages.find]
where = src
exclude =
include =
  *
